--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monster-rolodex",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://bhattshubham15.github.io/monster-rolodex",
+  "homepage": "http://bhattshubham15.github.io/monster-rolodex",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
